[package]
name = "fync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
clap = { version = "4.5.18", features = ["derive"] }
ignore = "0.4.23"
iroh-blake3 = "1.4.5"
notify-debouncer-full = "0.3.1"
tempfile = "3.12.0"
tokio = "1.40.0"
walkdir = "2.5.0"
