[package]
name = "fync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
clap = { version = "4.5.18", features = ["derive"] }
crossbeam-channel = "0.5.13"
fanotify-rs = "0.3.1"
ignore = "0.4.23"
nix = { version = "0.29.0", features = ["fanotify"] }
libc = { git = "https://github.com/rust-lang/libc" }
notify-debouncer-full = "0.3.1"
tempfile = "3.12.0"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
bstr = "1.10.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
blake3 = { version = "1.5.4", features = ["serde"] }
